--- a/sahana.html
+++ b/sahana.html
@@ -4,6 +4,9 @@
   <title>Resume</title>
 </head>
 <body>
+  <a href="http://127.0.0.1:5500/prokabaddi.html" target="_blank">click</a>
+  <img src="download (1).jpeg">SEVEN
+  <img src="" alt="image">
   <h1>James</h1>
   <p>Email:jamesandry45@gmail.com<br>
   Phone:6723983470<br>
@@ -11,6 +14,7 @@
   <h2>Career Objective</h2>  <hr>
   <p>To obtain a software development position where I can utilize my technical skills, problem-solving ability, and passion for coding to contribute to the growth of the organization.</p>
   <h2>Educational Qualification</h2>  <hr>
+  <a href="http://127.0.0.1:5500/prokabaddi.html"><img src="download.jpeg" height="150px" width="150px"></a>
   <table border="1">
     <tr>
       <th>Qualification</th>
@@ -38,7 +42,7 @@
     </tr>
   </table>
   <h2>Skills</h2>  <hr>
-  <ul>
+  <ul >
     <li>Languages:Java</li>
     <li>Web Technologies:HTML,CSS</li>
     <li>Database:SQL</li>
