--- a/Sora.html
+++ b/Sora.html
@@ -37,11 +37,22 @@
         <dt>JavaScript</dt>
         <dd>A programming language commonly used in web development</dd>
     </dl>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/-pHfPJGatgE?si=yL57-ZXww_Pmm43A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <video controls loop >
-        <source src="Sparkle _ Your Name AMV.mp4" type="video/mp4" width="25px" height="25px">
-    </video>
     <em>vxjsdcyfujdsfcdvyjc</em><br>
-    <i>wfwyuyedfhuerfy</i>
+    <i>wfwyuyedfhuerfy</i><form>
+        <input type="text" placeholder="Enter your name">
+<br><br>
+        <input type="email" placeholder="Enter your name" ><br><br>
+        <input type="date" name="date"><br><br>
+        <input type="datetime-local"><br><br>
+        <input type="password" placeholder="password"><br><br>
+        <input type="number" placeholder="1234567890"><br><br>
+        <input type="checkbox">Apple
+        <input type="checkbox">Orange<br><br>
+        <input type="radio" name="Male">Male
+        <input type="radio" name="Male">Female
+        <input type="submit" value="submit">
+        <input type="reset" value="restart">
+        <button type="submit">Submit</button>
+    </form>
     </body>
     </html>
