--- a/resume.html
+++ b/resume.html
@@ -41,9 +41,19 @@
         <video controls loop width="320px" heigth="250px">
             <source src="Sparkle _ Your Name AMV.mp4">
         </video>
+            <audio src="Senorita Ringtone Download Mp3 - MobCup.Com.Co.mp3" controls loop></audio>
+
     <h3>Languages</h3>
     <p>Languages Known: English, Telugu, Kannada</p>
     <h3>Signature</h3>
     <i>Sora</i>
+    <pre>udfikjrdg
+        dljfdjfjdib
+        flkgfdjkujrdgj
+    </pre>
+    <div>
+        <a href="fjd">Home</a>
+        <a href="hfdukf">contacts</a>
+    </div>
 </body>
 </html>
