--- a/prokabaddi.html
+++ b/prokabaddi.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<table border="1" >
+<table border="1"><caption>prokabaddi</caption>
     <tr>
       <th colspan="2">Rank</th>
     
