--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
         <label>password:</label>
         <input type="password" placeholder="password" required><br><br>
         <label>Phonenumber:</label>
-        <input type="tel" placeholder="1234567890" required><br><br>
+        <input type="phone" placeholder="1234567890" required><br><br>
         <label>DOB:</label>
         <input type="Date" required><br><br>
         <label>Enter your Age</label>
@@ -44,9 +44,9 @@
         <input type="radio" name="experience">Intermediate
         <input type="radio" name="experience">Advanced<br><br>
         <label>Choose Payment Method:</label><br>
-        <input type="radio" name="payment" value="Credit Card"> Credit Card<br>
-        <input type="radio" name="payment" value="PayPal"> PayPal<br>
-        <input type="radio" name="payment" value="Cash on Delivery"> Cash on Delivery<br><br>
+        <input type="radio" name="payment" > Credit Card<br>
+        <input type="radio" name="payment"> PayPal<br>
+        <input type="radio" name="payment" > Cash on Delivery<br><br>
         <input type="submit" value="Submit">
         <input type="reset" value="Reset"><br><br>
     </form>
